--- a/index.html
+++ b/index.html
@@ -32,43 +32,48 @@
 
       <section id="hometop">
         <h4>Sign up to recive STC's Turtle Talk newsletter!</h2>
+          <form action="####">
+            <input type="email" id="email"  value="email"><br><br>
+            <button type="button" onclick="Thanks for doing your part to save the turtles!">SUBSCRIBE</button>
+          </form>
 
-        <button><a href="###">Subscribe</a></button>
 
       </section>
 
       <section id="blog">
-        <div class="blogtop">
-          <h2>BLOG</h2>
-          <p>Keep Up to date with our blog for news and updates on all things sea turtles.</p>
+        <div class="blogcontainer">
+          <div class="blogtop">
+            <h2>BLOG</h2>
+            <p>Keep Up to date with our blog for news and updates on all things sea turtles.</p>
+          </div>
+
+          <div class="blogmiddle">
+            <article class="Article">
+              <h5>Partner Spotlight - Wildlife Collections</h5>
+              <h6>May 27, 2021</h6>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </article>
+
+            <article class="Article">
+              <h5>Satellite- Tagged Leatherback Turtle "HOPE" returns to nest in florida for second consecutive year</h5>
+              <h6>April 6, 2021</h6>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </article>
+
+            <article class="Article">
+              <h5>Sea Turtle Grants Program Award $415,000 to conservation project in florida</h5>
+              <h6>March 30, 2021</h6>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </article>
+          </div>
+
         </div>
-
-        <div class="blogmiddle">
-          <article class="Article">
-            <h5>Partner Spotlight - Wildlife Collections</h5>
-            <h6>May 27, 2021</h6>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </article>
-
-          <article class="Article">
-            <h5>Satellite- Tagged Leatherback Turtle "HOPE" returns to nest in florida for second consecutive year</h5>
-            <h6>April 6, 2021</h6>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </article>
-
-          <article class="Article">
-            <h5>Sea Turtle Grants Program Award $415,000 to conservation project in florida</h5>
-            <h6>March 30, 2021</h6>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </article>
-        </div>
-
 
       </section>
     </div>
 
 
-<!-- 
+<!--
 
     <section id="homebottom">
 
