Start of footer

--- a/index.html
+++ b/index.html
@@ -77,17 +77,55 @@
     </div>
 
 
-<!--
-
-    <section id="homebottom">
 
 
-      <button><a href="###">Donate</a></button>
-      <button><a href="###">Adopt</a></button>
+    <footer id="footer">
+
+      <section class="footerbuttons">
+        <button>Donate</button>
+        <button>Adopt</button>
+      </section>
+
+
+      <section id="footerbottom">
+
+        <div class="footerleft">
+          <div class="footerleft-top">
+            <img src="img/SEAL.png" alt="logo">
+            <div class="top-left-right">
+              <p>SEA TURTLE CONSERVANCY</p>
+              <p>4581NE 6th ST. Suite A </p>
+              <p>Gainesville, FL 32609</p>
+            </div>
+          </div>
+          <div class="footerleft-btm">
+            <h6>stc@cpmserveturtles.org</h6>
+          </div>
+        </div>
+
+        <div class="footercenter">
+          <img src="img/footerlogo.png" alt="footercenterlogo">
+        </div>
+
+        <div class="footerright">
+          <div class="footright-left">
+            <h6>ABOUT</h4>
+            <h6>PROGRAMS</h4>
+            <h6>SUPPORT STC</h4>
+          </div>
+          <div class="footerright-right">
+            <h6>SEA TURTLES</h4>
+            <h6>SHOP</h4>
+            <h6>CONTACT</h4>
+          </div>
+        </div>
+
+
+      </section>
 
 
 
-    </section> -->
+    </footer>
   </main>
 
 
