--- a/index.html
+++ b/index.html
@@ -108,16 +108,16 @@
         </div>
 
         <div class="footerright">
-          <div class="footright-left">
-            <h6>ABOUT</h4>
-            <h6>PROGRAMS</h4>
-            <h6>SUPPORT STC</h4>
-          </div>
-          <div class="footerright-right">
-            <h6>SEA TURTLES</h4>
-            <h6>SHOP</h4>
-            <h6>CONTACT</h4>
-          </div>
+          <ul class="footerright-left">
+            <li>ABOUT</li>
+            <li>PROGRAMS</li>
+            <li>SUPPORT STC</li>
+          </ul>
+          <ul class="footerright-right">
+            <li>SEA TURTLES</li>
+            <li>SHOP</li>
+            <li>CONTACT</li>
+          </ul>
         </div>
 
 
