--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <header>
-            <h1 class="logo">Logo</h1>
+            <h1 class="logo"><img src="logos/logo-horizontal.png"></h1>
             <nav class="nav">
                 <ul>
                     <li><a href="">About</a></li>
