edited css on support

--- a/support.html
+++ b/support.html
@@ -45,7 +45,8 @@
 <!--Support Info -->
 
     <section class="supportinfo">
-        <h3>HOW YOU CAN HELP</h3>
+        <h3 class="strikearound">HOW YOU CAN HELP</h3>
+
 
         <div class="supportboxes">
             <div class="col">
@@ -142,7 +143,6 @@
     </section>
     </main>
 </body>
-
 
 
 
