updated menu with dropdown js on index & about

--- a/about.html
+++ b/about.html
@@ -29,15 +29,24 @@
     <header>
       <h1 class="logo"><img src="img/logo-horizontal.png"></h1>
       <nav class="nav">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="##">Programs</a></li>
-          <li><a href="support.html">Support STC</a></li>
-          <li><a href="">Contact</a></li>
-        </ul>
+
+          <ul class="menu-ctn">
+              <li><a href="index.html">HOME</a></li>
+              <li><a href="about.html">ABOUT</a></li>
+
+              <li id="menu">SUPPORT STC
+                <ul id="dropdown">
+                    <li><a href="support.html">ADOPT</li></a>
+                    <li><a href="support.html">DONATE</li></a>
+                    <li><a href="support.html">MEMBERSHIP</li></a>
+                    <li><a href="support.html">PARTNERS & SPONSORS</li></a>
+                </ul>
+              </li>
+              <li><a href="##">SHOP</a></li>
+              <li><a href="">CONTACT</a></li>
+          </ul>
       </nav>
-    </header>
+  </header>
 
     <div class="hero-image">
     </div>
@@ -143,5 +152,6 @@
 
         </footer>
 
+    <script src="js/dropdown.js" charset="utf-8"></script>
     </body>
 </html>
