--- a/support.html
+++ b/support.html
@@ -32,7 +32,7 @@
 
               <ul class="menu-ctn">
                   <li><a href="index.html">HOME</a></li>
-                  <li><a href="support.html">ABOUT</a></li>
+                  <li><a href="about.html">ABOUT</a></li>
 
                   <li id="menu">SUPPORT STC
                     <ul id="dropdown">
