--- a/index.html
+++ b/index.html
@@ -28,17 +28,26 @@
 
   <main id="home">
     <header>
-        <h1 class="logo"><img src="img/logo-horizontal.png"></h1>
-        <nav class="nav">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="##">Programs</a></li>
-                <li><a href="support.html">Support STC</a></li>
-                <li><a href="">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+      <h1 class="logo"><img src="img/logo-horizontal.png"></h1>
+      <nav class="nav">
+
+          <ul class="menu-ctn">
+              <li><a href="index.html">HOME</a></li>
+              <li><a href="about.html">ABOUT</a></li>
+
+              <li id="menu">SUPPORT STC
+                <ul id="dropdown">
+                    <li><a href="support.html">ADOPT</li></a>
+                    <li><a href="support.html">DONATE</li></a>
+                    <li><a href="support.html">MEMBERSHIP</li></a>
+                    <li><a href="support.html">PARTNERS & SPONSORS</li></a>
+                </ul>
+              </li>
+              <li><a href="##">SHOP</a></li>
+              <li><a href="">CONTACT</a></li>
+          </ul>
+      </nav>
+  </header>
 
       <section id="hometop">
         <h4>Sign up to recive STC's Turtle Talk newsletter!</h2>
@@ -142,6 +151,6 @@
 
 
   <script src="js/readmore.js" charset="utf-8"></script>
-
+  <script src="js/dropdown.js" charset="utf-8"></script>
   </body>
 </html>
