--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <!-- Fonts -->
     <link rel="stylesheet" href="https://use.typekit.net/czu5ldq.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <title>Sea Turtle Conservancy</title>
 
@@ -28,16 +29,42 @@
 
   <main id="home">
     <header>
-        <h1 class="logo"><img src="img/logo-horizontal.png"></h1>
-        <nav class="nav">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="##">Programs</a></li>
-                <li><a href="support.html">Support STC</a></li>
-                <li><a href="">Contact</a></li>
+        <div class="desktop-menu">
+          <h1 class="logo"><img src="img/logo-horizontal.png"></h1>
+          <nav class="nav">
+              <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="about.html">About</a></li>
+                  <li><a href="##">Programs</a></li>
+                  <li><a href="support.html">Support STC</a></li>
+                  <li><a href="">Contact</a></li>
+              </ul>
+          </nav>
+        </div>
+
+          <div class="mobile-menu">
+            <button class="hamburger">
+              <span class="menuIcon material-icons">
+                menu
+              </span>
+              <span class="material-icons xIcon">
+                close
+              </span>
+            </button>
+          
+            <ul class="menu">
+              <li><a class="menuLinks" href="about.html">ABOUT</a></li>
+              <li><a class="menuLinks" href="#">PROGRAMS</a></li>
+              <li><a class="menuLinks" href="#">SEA TURTLES</a></li>
+              <li><a class="menuLinks" href="support.html">SUPPORT STC</a></li>
+              <li><a class="menuLinks" href="#">SHOP</a></li>
+              <li><a class="menuLinks" href="#">CONTACT</a></li>
+              <li>
+                <div class="menu-logo"><img src="img/logomark-white.png" alt="footercenterlogo"></div>
+              </li>
             </ul>
-        </nav>
+          </div>
+
     </header>
 
       <section id="hometop">
@@ -142,6 +169,7 @@
 
 
   <script src="js/readmore.js" charset="utf-8"></script>
+  <script src="js/hamburger.js" charset="utf-8"></script>
 
   </body>
 </html>
