menu styles, added html menus

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
   <main id="home">
     <header>
         <div class="desktop-menu">
-          h1 class="logo"><img src="img/logo-horizontal.png"></h1>
+          <h1 class="logo"><img src="img/logo-horizontal.png"></h1>
           <nav class="nav">
           
             <ul class="menu-ctn">
               <li><a href="index.html">HOME</a></li>
               <li><a href="about.html">ABOUT</a></li>
           
-              <li id="menu">SUPPORT STC
+              <li id="menu"><span>SUPPORT STC</span>
                 <ul id="dropdown">
                   <li><a href="support.html">ADOPT</li></a>
                   <li><a href="support.html">DONATE</li></a>
