--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
 
     <!-- Fonts -->
     <link rel="stylesheet" href="https://use.typekit.net/czu5ldq.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <title>Sea Turtle Conservancy</title>
 
@@ -27,25 +28,52 @@
 
   <body>
     <header>
-      <h1 class="logo"><img src="img/logo-horizontal.png"></h1>
-      <nav class="nav">
+      <div class="desktop-menu">
+        <h1 class="logo"><img src="img/logo-horizontal.png"></h1>
+        <nav class="nav">
 
-          <ul class="menu-ctn">
-              <li><a href="index.html">HOME</a></li>
-              <li><a href="about.html">ABOUT</a></li>
+            <ul class="menu-ctn">
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="about.html">ABOUT</a></li>
 
-              <li id="menu">SUPPORT STC
-                <ul id="dropdown">
-                    <li><a href="support.html">ADOPT</li></a>
-                    <li><a href="support.html">DONATE</li></a>
-                    <li><a href="support.html">MEMBERSHIP</li></a>
-                    <li><a href="support.html">PARTNERS & SPONSORS</li></a>
-                </ul>
-              </li>
-              <li><a href="##">SHOP</a></li>
-              <li><a href="">CONTACT</a></li>
-          </ul>
-      </nav>
+                <li id="menu"><span>SUPPORT STC</span>
+                  <ul id="dropdown">
+                      <li><a href="support.html">ADOPT</li></a>
+                      <li><a href="support.html">DONATE</li></a>
+                      <li><a href="support.html">MEMBERSHIP</li></a>
+                      <li><a href="support.html">PARTNERS & SPONSORS</li></a>
+                  </ul>
+                </li>
+                <li><a href="##">SHOP</a></li>
+                <li><a href="">CONTACT</a></li>
+            </ul>
+        </nav>
+      </div>
+
+
+      <div class="mobile-menu">
+        <button class="hamburger">
+          <span class="menuIcon material-icons">
+            menu
+          </span>
+          <span class="material-icons xIcon">
+            close
+          </span>
+        </button>
+        
+        <ul class="menu">
+          <li><a class="menuLinks" href="index.html">HOME</a></li>
+          <li><a class="menuLinks" href="#">PROGRAMS</a></li>
+          <li><a class="menuLinks" href="#">SEA TURTLES</a></li>
+          <li><a class="menuLinks" href="support.html">SUPPORT STC</a></li>
+          <li><a class="menuLinks" href="#">SHOP</a></li>
+          <li><a class="menuLinks" href="#">CONTACT</a></li>
+          <li>
+            <div class="menu-logo"><img src="img/logomark-white.png" alt="footercenterlogo"></div>
+          </li>
+        </ul>
+      </div>
+
   </header>
 
     <div class="hero-image">
@@ -153,5 +181,6 @@
         </footer>
 
     <script src="js/dropdown.js" charset="utf-8"></script>
+    <script src="js/hamburger.js" charset="utf-8"></script>
     </body>
 </html>
