bottom carousel added

--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@
 
   <body>
 
-
-
   <main id="home">
     <header>
         <div class="desktop-menu">
@@ -76,6 +74,14 @@
       
   </header>
 
+  <!--Caoursel-->
+      <section class="carousel-section1">
+
+        
+
+
+      </section>
+
       <section id="hometop">
         <h4>Sign up to recive STC's Turtle Talk newsletter!</h2>
           <form action="####">
@@ -123,6 +129,42 @@
 
       </section>
     </div>
+
+  <section class="carousel-section">
+  
+    <div class='wrap'>
+      <ul class='carousel is-set'>
+        <li class='carousel-seat'>
+          <div class="c-photo"><img src="img/c-turtle-1.png" alt="sea turle"></div>
+        </li>
+        <li class='carousel-seat'>
+          <div class="c-photo"><img src="img/c-turtle-2.png" alt="sea turle"></div>
+        </li>
+        <li class='carousel-seat'>
+          <div class="c-photo"><img src="img/c-turtle-3.png" alt="sea turle"></div>
+        </li>
+        <li class='carousel-seat'>
+          <div class="c-photo"><img src="img/c-turtle-4.png" alt="sea turle"></div>
+        </li>
+        <li class='carousel-seat'>
+          <div class="c-photo"><img src="img/c-turtle-5.png" alt="sea turle"></div>
+        </li>
+        <li class='carousel-seat is-ref'>
+          <div class="c-photo"><img src="img/c-turtle-6.png" alt="sea turle"></div>
+        </li>
+      </ul>
+    </div>
+    <div class="controls">
+      <button class='toggle toggle1' data-toggle='prev'><span class="toggle material-icons">
+          arrow_back_ios
+        </span></button>
+      <button class='toggle' data-toggle='next'><span class="toggle material-icons">
+          arrow_forward_ios
+        </span></button>
+    </div>
+  
+  
+  </section>
 
 
 
@@ -180,5 +222,6 @@
   <script src="js/readmore.js" charset="utf-8"></script>
   <script src="js/hamburger.js" charset="utf-8"></script>
   <script src="js/dropdown.js" charset="utf-8"></script>
+  <script src="js/carousel.js" charset="utf-8"></script>
   </body>
 </html>
