added jumbo photos and text

--- a/about.html
+++ b/about.html
@@ -52,6 +52,11 @@
 
 
       <div class="mobile-menu">
+
+        <div class="mobile-logo">
+          <img src="img/logo-condensed-teal.png" alt="teal logo">
+        </div>
+        
         <button class="hamburger">
           <span class="menuIcon material-icons">
             menu
@@ -76,8 +81,9 @@
 
   </header>
 
-    <div class="hero-image">
-    </div>
+    <section class="jumbo-image">
+      <div><img src="img/turtle-05.jpg"></div>
+    </section>
 
     <main>
             <!-- <div class="mission">
