--- a/support.html
+++ b/support.html
@@ -24,9 +24,6 @@
 
 <!--Nav-->
 
-
-<!--Carousel -->
-
       <header>
         <div class="desktop-menu">
           <h1 class="logo"><img src="img/logo-horizontal.png"></h1>
@@ -51,6 +48,17 @@
         </div>
 
         <div class="mobile-menu">
+
+          <div class="opening-words support-words">
+            <h1>SUPPORT STC<h1>
+            <p>Help us support sea turtle research, conservation and advocacy to address the threats to sea turtles and their natural
+            habitats</p>
+          </div>
+
+          <div class="mobile-logo">
+            <img src="img/logo-condensed-teal.png" alt="teal logo">
+          </div>
+
           <button class="hamburger">
             <span class="menuIcon material-icons">
               menu
@@ -76,8 +84,16 @@
 
       </header>
 
+
 <!--Support Info -->
     <main class="support">
+
+    <section class="jumbo-image">
+    
+      <div><img src="img/turtle-12.jpg"></div>
+    
+    </section>
+
     <section class="supportinfo">
         <h3 class="strikearound">HOW YOU CAN HELP</h3>
 
