--- a/support.html
+++ b/support.html
@@ -49,12 +49,6 @@
 
         <div class="mobile-menu">
 
-          <div class="opening-words support-words">
-            <h1>SUPPORT STC<h1>
-            <p>Help us support sea turtle research, conservation and advocacy to address the threats to sea turtles and their natural
-            habitats</p>
-          </div>
-
           <div class="mobile-logo">
             <img src="img/logo-condensed-teal.png" alt="teal logo">
           </div>
@@ -89,6 +83,12 @@
     <main class="support">
 
     <section class="jumbo-image">
+
+      <div class="opening-words support-words">
+        <h1>SUPPORT STC<h1>
+            <h3>Help us support sea turtle research, conservation and advocacy to address the threats to sea turtles and their
+              natural habitats.</h3>
+      </div>
     
       <div><img src="img/turtle-12.jpg"></div>
     
